<resources>
    <string name="app_name">Project</string>
    <string name="login_email_address">Email</string>
    <string name="login_password">Password</string>
    <string name="login_login">Login</string>
    <string name="login_sign_up">Sign Up</string>
    <string name="login_forget_password">Forget Password</string>
    <string name="sign_up_label">Sign Up</string>
    <string name="sign_up_email_address">Email Address</string>
    <string name="sign_up_password">Password</string>
    <string name="sign_up_password_confirm">Confirm Password</string>
    <string name="sign_up_age">Age</string>
    <string name="sign_up_male">Male</string>
    <string name="sign_up_female">Female</string>
    <string name="sign_up_commute_method">Commute Method:</string>
    <string name="sign_up_sign_up">Sign Up</string>
    <string name="forget_password_label">Forget Password</string>
    <string name="forget_password_email_address">Email Address</string>
    <string name="forget_password_confirm">Confirm</string>
    <string name="main_label">MainActivity</string>
    <string name="nav_home">Home</string>
    <string name="nav_map">Map</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_planner">Planner</string>
    <string name="settings_username">Username:</string>
    <string name="settings_commute_method">Commute Method:</string>
    <string name="settings_save">Save</string>
    <string name="settings_logout">Log Out</string>
    <string name="home_ar">Go To AR View</string>
    <string name="game_view_content_description">Game view</string>
    <string name="code">Optional</string>
    <string name="resetMap">Reset Map</string>
    <string name="arNavigation">3D Navigation</string>
    <string name="startRoute">Start Route</string>
    <string name="camera_permission_title">We need permission to use your camera</string>
    <string name="camera_permission_rationale">This app requires camera in order for AR functionality to work.</string>
    <string name="location_permission_title">We need permission to use your location service</string>
    <string name="location_permission_rationale">This app requires location service in order for the map to work.</string>
    <string name="permission_missing">Required permission is not granted. AR view could not be initialized.</string>
    <string name="Place_of_interest">Place of Interest</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    
    <string-array name="placeOfInterest">
        <item>item 1</item>
        <item>item 2 </item>
        <item>item 3 </item>
        <item>item 4</item>
        <item>item 5</item>

    </string-array>
    
</resources>